--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jahid Hasan | Developer Portfolio</title>
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/038/049/920/small/ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png.png" type="image/png">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,16 +15,149 @@
   <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
-  <link href="style.css" rel="stylesheet">
+  <style>
+    :root {
+      --bg-color: #3170af;
+      --text-color: #000000;
+      --nav-color: #1c534a;
+      --footer-color: #002244;
+    }
+    body.dark-mode {
+      --bg-color: #121212;
+      --text-color: #ffffff;
+      --nav-color: #000000;
+      --footer-color: #000000;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
+      transition: 0.3s;
+    }
+    nav {
+      background: var(--nav-color);
+    }
+    nav a {
+      color: rgb(172, 170, 170) !important;
+      font-weight: bold;
+    }
+    nav a:hover {
+      color: #ffd700 !important;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1532619675605-1a4503a08c6b?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
+      height: 95vh;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-shadow: 2px 2px 4px #000;
+      text-align: center;
+    }
+    .portfolio img, .testimonials img {
+      width: 100%;
+      height: auto; /* Ensures aspect ratio is maintained */
+      max-width: 100px; /* Sets a maximum width for the images */
+      border-radius: 10px;
+    }
+    .social-icons a {
+      color: white;
+      margin: 0 10px;
+      font-size: 24px;
+      transition: 0.3s;
+    }
+    .social-icons a:hover {
+      color: #00d1ff;
+    }
+    .toggle-btn {
+      background: none;
+      border: 2px solid white;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: 0.3s;
+    }
+    .toggle-btn:hover {
+      background: white;
+      color: #000;
+    }
+    footer {
+      background: var(--footer-color);
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+    .star-rating i {
+      transition: transform 0.3s;
+    }
+    .star-rating:hover i {
+      transform: scale(1.3);
+      color: #ffc107;
+    }
+    /* Media Queries for Breakpoints */
+    @media (max-width: 320px) {
+      .hero h1 {
+        font-size: 1.5rem;
+      }
+      .hero p {
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 576px) {
+      .hero h1 {
+        font-size: 1.8rem;
+      }
+      .hero p {
+        font-size: 0.9rem;
+      }
+      .card-title {
+        font-size: 1rem;
+      }
+      .btn {
+        font-size: 0.8rem;
+        padding: 8px 12px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
+    }
+
+    @media (min-width: 1025px) {
+      .hero h1 {
+        font-size: 3.5rem;
+      }
+      .hero p {
+        font-size: 1.5rem;
+      }
+      .card-title {
+        font-size: 1.2rem;
+      }
+      .btn {
+        font-size: 1rem;
+        padding: 10px 20px;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Jahid</a>
+    <a class="navbar-brand" href="#">
+      <img src="https://static.vecteezy.com/system/resources/thumbnails/038/049/920/small/ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png.png" alt="Logo" style="height: 40px; margin-right: 10px;">
+      Jahid
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,7 +173,6 @@
   </div>
 </nav>
 
-<!-- Hero Section -->
 <section id="home" class="hero">
   <h1 data-aos="fade-up">I'm Jahid Hasan</h1>
   <p data-aos="fade-up" data-aos-delay="300">Web Developer | Designer | Dreamer</p>
@@ -50,121 +183,183 @@
   </div>
 </section>
 
-<!-- Portfolio Section -->
 <section id="portfolio" class="container py-5">
   <h2 class="text-center mb-5" data-aos="fade-up">My Projects</h2>
   <div class="row g-4">
-    <!-- Project Cards -->
-    <div class="col-md-4" data-aos="zoom-in">
+    <div class="col-md-2" data-aos="zoom-in">
       <div class="card shadow">
-        <img src="https://source.unsplash.com/400x300/?website" class="card-img-top" alt="Project 1">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/034/960/488/small/vip-icon-for-graphic-design-logo-website-social-media-mobile-app-ui-png.png" class="card-img-top" alt="Project 1">
         <div class="card-body text-center">
-          <h5 class="card-title">Personal Website</h5>
+          <h5 class="card-title">Traditional-website</h5>
           <a href="https://jahidads.github.io/my-traditional-website/" class="btn btn-primary" target="_blank">View Project</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
+    <div class="col-md-2" data-aos="zoom-in" data-aos-delay="200">
       <div class="card shadow">
-        <img src="https://source.unsplash.com/400x300/?coding" class="card-img-top" alt="Project 2">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/038/049/920/small/ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png.png" class="card-img-top" alt="Project 2">
         <div class="card-body text-center">
           <h5 class="card-title">Portfolio Website</h5>
           <a href="#" class="btn btn-primary" target="_blank">View Project</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4" data-aos="zoom-in" data-aos-delay="400">
+    <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
       <div class="card shadow">
-        <img src="https://source.unsplash.com/400x300/?technology" class="card-img-top" alt="Project 3">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/036/895/728/small/hacker-logo-or-hacker-in-black-hoodie-cyber-crime-with-laptop-free-png.png" class="card-img-top" alt="Project 3">
         <div class="card-body text-center">
-          <h5 class="card-title">E-commerce Design</h5>
-          <a href="https://jahidads.github.io/my-first-website/#" class="btn btn-primary" target="_blank">View Project</a>
+          <h5 class="card-title">CyberSecPro</h5>
+          <a href="https://jahidads.github.io/Cyber-Security/#" class="btn btn-primary" target="_blank">View Project</a>
         </div>
       </div>
     </div>
+    <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
+        <div class="card shadow">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/022/418/064/small/project-task-management-and-effective-time-planning-tools-project-development-icon-3d-vector-illustration-png.png" class="card-img-top" alt="Project 3">
+          <div class="card-body text-center">
+            <h5 class="card-title">Business-portfolio</h5>
+            <a href="https://jahidads.github.io/business-portfolio/#" class="btn btn-primary" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
+        <div class="card shadow">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/051/074/703/small/recycling-logo-with-planet-earth-earth-sphere-design-with-recycling-arrows-png.png" class="card-img-top" alt="Project 3">
+          <div class="card-body text-center">
+            <h5 class="card-title">Coming soon</h5>
+            <a href="https://example.com" class="btn btn-primary" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
+        <div class="card shadow">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/051/074/703/small/recycling-logo-with-planet-earth-earth-sphere-design-with-recycling-arrows-png.png" class="card-img-top" alt="Project 3">
+          <div class="card-body text-center">
+            <h5 class="card-title">Coming soon</h5>
+            <a href="https://example.com" class="btn btn-primary" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>    
   </div>
 </section>
 
-<!-- Testimonials Section -->
 <section id="testimonials" class="container py-5">
   <h2 class="text-center mb-5" data-aos="fade-up">Customer Reviews</h2>
   <div class="row g-4">
-    <!-- Testimonial Cards -->
-    <!-- 1st -->
     <div class="col-md-4" data-aos="fade-right">
       <div class="card shadow text-center p-3">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/277574377_2780637402244787_8171004333417298666_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHoHPFITYCIR7vhUzEqmu21wBtuLFp0QY3AG24sWnRBjXxKNm8DtyjYlMv8TZvcpDHorRuOKhvUBF36EnHSBaAq&_nc_ohc=dHzeXQc_rdIQ7kNvwHPPTcx&_nc_oc=Adkyer0MkJvFGhFUfJ6F_boWzxNPdG2Vf2iZfpED9KWbakp08EzIXmaIKJFuhz1-zCo&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=_q7RM3Z2ozKtXcAPPT6_Vg&oh=00_AfI381bMpvni_VvSOI1alTH8WjXO6C4NEKHzsHtuFQEoqA&oe=6832244D" class="rounded-circle mx-auto" style="width: 100px;" alt="">
         <p class="mt-3">"Amazing service! Jahid built my dream website perfectly."</p>
-        <h5>John Doe</h5>
+        <h5>Akash Ahmed </h5>
         <div class="star-rating mt-2">
-          <span class="text-warning">
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-          </span>
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
           <small class="text-muted d-block">5.0 ★ (32 Ratings)</small>
         </div>
       </div>
     </div>
-    <!-- 2nd -->
     <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
       <div class="card shadow text-center p-3">
         <img src="https://randomuser.me/api/portraits/women/44.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="">
         <p class="mt-3">"Very professional and friendly. Highly recommended."</p>
         <h5>Sarah Lee</h5>
         <div class="star-rating mt-2">
-          <span class="text-warning">
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-          </span>
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
           <small class="text-muted d-block">5.0 ★ (27 Ratings)</small>
         </div>
       </div>
     </div>
-    <!-- 3rd -->
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="https://randomuser.me/api/portraits/men/76.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/494306113_2534612656885964_3171710037323253750_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGHYewrOXM_3bWOUSG11b8O2gScNEISjqbaBJw0QhKOphFmHyFvW7mHGY-6_wZe7rcbt5YyIcHYPtVx6dzPzbZD&_nc_ohc=JFMcSWhiCIgQ7kNvwHgVUoT&_nc_oc=Admy9FMT0ks4zK-CtC97kXcNeuLD4vyb9gHnHAqC6TpTAQFmzizOcYchY_6yLJ8vDQo&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=K0g8SQ_k3kpQHc2Fk5nh_A&oh=00_AfLDGADKf4PPGh8rKMWNZfL1n_OgS1aSLWk4wXz0wsxbQg&oe=683223B4" class="rounded-circle mx-auto" style="width: 100px;" alt="">
         <p class="mt-3">"Top-notch design and development skills. Will hire again!"</p>
-        <h5>Michael Smith</h5>
+        <h5>RasheL HosseN</h5>
         <div class="star-rating mt-2">
-          <span class="text-warning">
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-          </span>
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
           <small class="text-muted d-block">5.0 ★ (41 Ratings)</small>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
+      <div class="card shadow text-center p-3">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/472265164_122216707160022439_1001905034899659524_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGRfDorJWkX7sSU3WdrbKzWg5XmHkxglvCDleYeTGCW8L7o1ADaKdk64a6uCXixcJwksmASqPoOXoabdkw1ZrPr&_nc_ohc=lI9GR3qym9sQ7kNvwHA6VPm&_nc_oc=Adkqw_31Qc1CVoccaSecR9n9dA0eDM8KC_0355TmXj0_h4f_1hU6K9RyupLpT7EY7H4&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=8rCSD2mo6Jv-1uwbhlFFjA&oh=00_AfLBd9u8QkCExiXG7dpydqzEMmLZ_ubD4mMne3-9MpaHOA&oe=6831F790" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <p class="mt-3">"Top-notch The system demonstrates a strong commitment to safe, traditional development principles with modern protection."</p>
+        <h5>Abdullah Al Kafi</h5>
+        <div class="star-rating mt-2">
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+          <small class="text-muted d-block">4.0 ★ (123 Ratings)</small>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
+      <div class="card shadow text-center p-3">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/491918938_122217474758168483_4678418564444703115_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeG4FvK7VwEJcudL-4stdny4X1c71U2MadFfVzvVTYxp0Rtffhe4ExBQPOhVwobQJU8VRcX10M5vL7rPxSo4id8U&_nc_ohc=DDIbtPwMdsUQ7kNvwGuMNSA&_nc_oc=Adm8HP7feEHCM_3zfBzJ0WNfXVhKvV1NcYD6PnHXZRIkVj4YqNstJPiiD_jGyfbIBvg&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=IqzQFVkvUcGteBb3fbC_fw&oh=00_AfK26E_WvQH7jcdO4zHIHN-QFhAyg5Z3xhO0KWRhoPZ7sw&oe=6831F7BF" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <p class="mt-3">"The project reflects a high level of security hygiene and responsibility."</p>
+        <h5>Ishraq Ahmad</h5>
+        <div class="star-rating mt-2">
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+          <small class="text-muted d-block">5.0 ★ (1k Ratings)</small>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
+      <div class="card shadow text-center p-3">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/486288441_619825231031202_472849673548077449_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeF5HDwxbpga3ZHgculj7G4hbD9HmOq768xsP0eY6rvrzHCw4hUlzO4iYYMcIyUlw1Kg-FN_4SbTHpdzdatbnDtX&_nc_ohc=g_xUbrVh7-0Q7kNvwG4tnLG&_nc_oc=AdmEbFiC5fXiN5vvYs-TAoGH3CdM-aIYKcXlaAMJQA_4HoD70jYh3Jvacbdh0ujSux0&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=vo8GR8arjT_XjvskOmOrSw&oh=00_AfKBNT61ahsy-XafIp8_HbbYlnoZrN-jwdm1XTsS5mR40Q&oe=68321D55" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <p class="mt-3">"All critical attack vectors — including SQL injection, XSS, CSRF, session hijacking, and insecure file handling — are effectively mitigated."</p>
+        <h5>MD Tanim Rahman</h5>
+        <div class="star-rating mt-2">
+          <span class="text-warning"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+          <small class="text-muted d-block">5.0 ★ (75 Ratings)</small>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Contact Section -->
 <section id="contact" class="container py-5">
   <h2 class="text-center mb-5" data-aos="fade-up">Contact Me</h2>
   <div class="row justify-content-center">
     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
       <form action="https://formspree.io/f/mayvlqld" method="POST">
-        <div class="mb-3">
-          <input type="text" class="form-control" name="name" placeholder="Your Name" required>
-        </div>
-        <div class="mb-3">
-          <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-        </div>
-        <div class="mb-3">
-          <textarea class="form-control" name="message" rows="5" placeholder="Your Message" required></textarea>
-        </div>
+        <div class="mb-3"><input type="text" class="form-control" name="name" placeholder="Your Name" required></div>
+        <div class="mb-3"><input type="email" class="form-control" name="email" placeholder="Your Email" required></div>
+        <div class="mb-3"><textarea class="form-control" name="message" rows="5" placeholder="Your Message" required></textarea></div>
         <button type="submit" class="btn btn-success w-100">Send Message</button>
       </form>
     </div>
   </div>
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-8 col-sm-12" data-aos="fade-up" data-aos-delay="300">
+      <div class="ratio ratio-16x9">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.3047703417474!2d89.08758447537726!3d25.057657377801064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fc8d007d74c671%3A0x6e27870ee3260c1d!2sjahidads!5e0!3m2!1sen!2sbd!4v1747730439019!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </div>
 </section>
 
-<!-- Footer -->
-<footer>
-  &copy; 2025 Jahid Hasan | All Rights Reserved
+<footer>&copy; 2025 Jahid Hasan | All Rights Reserved<br>
+  <a href="https://github.com/jahidads" target="_blank">
+    <i class="fab fa-github"></i> Follow me on GitHub
+  </a>
 </footer>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-<script src="script.js"></script>
+<script>
+  AOS.init();
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark-mode');
+  }
+
+  // Lazy Loading for Images
+  document.addEventListener('DOMContentLoaded', function () {
+    const images = document.querySelectorAll('img');
+    images.forEach(img => {
+      img.setAttribute('loading', 'lazy');
+      img.classList.add('img-fluid');
+    });
+  });
+</script>
 
 </body>
 </html>
