--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
       </div>
       <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
         <div class="card shadow">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/051/074/703/small/recycling-logo-with-planet-earth-earth-sphere-design-with-recycling-arrows-png.png" class="card-img-top" alt="Project 3">
+          <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/495563656_122107947614855440_1152109947886773901_n.jpg?stp=c0.0.1542.1542a_dst-jpg_s200x200_tt6&_nc_cat=106&ccb=1-7&_nc_sid=1d2534&_nc_ohc=fShzMFoc9Z4Q7kNvwEDfVCl&_nc_oc=AdluVD8yY5pPqSZDGYOwei5buXl1-Y4q0895JLG83cmZUZoXmIPovfuxGAO4OE7f_KI&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=rjjOj_kT50l3kdEB2G9gHw&oh=00_AfIRM-U1FLegiBEUAA100UQHOuO3vLvBI3vXwOMMH61PhA&oe=68370799" class="card-img-top" alt="Project 3">
           <div class="card-body text-center">
-            <h5 class="card-title">Coming soon</h5>
-            <a href="https://example.com" class="btn btn-primary" target="_blank">View Project</a>
+            <h5 class="card-title">My Portfolio</h5>
+            <a href="https://jahidads.github.io/my-portfolio/" class="btn btn-primary" target="_blank">View Project</a>
           </div>
         </div>
       </div>
