--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="card shadow">
         <img src="https://static.vecteezy.com/system/resources/thumbnails/038/049/920/small/ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png.png" class="card-img-top" alt="Project 2">
         <div class="card-body text-center">
-          <h5 class="card-title">Portfolio Website</h5>
+          <h5 class="card-title">Developer Portfolio </h5>
           <a href="#" class="btn btn-primary" target="_blank">View Project</a>
         </div>
       </div>
@@ -233,10 +233,10 @@
       </div>
       <div class="col-md-2" data-aos="zoom-in" data-aos-delay="400">
         <div class="card shadow">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/051/074/703/small/recycling-logo-with-planet-earth-earth-sphere-design-with-recycling-arrows-png.png" class="card-img-top" alt="Project 3">
+          <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/499925852_122097639218890978_8550758550378172993_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=8RhKp_EjiOUQ7kNvwEHdI5C&_nc_oc=Adl4hlHMvewebuKR5Do7kHB7S_7CSK7-5O_rKQOcTqYYsy-Owjh8OzWSJpKEEzk0jds&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=J-AlVtoRmSwCNfazS2o0dw&oh=00_AfJ45JnvNjTozev2X3Nu1xXNAVcLRl3FSeYNJmSJdhKcCQ&oe=6838D603" class="card-img-top" alt="Project 3">
           <div class="card-body text-center">
-            <h5 class="card-title">Coming soon</h5>
-            <a href="https://example.com" class="btn btn-primary" target="_blank">View Project</a>
+            <h5 class="card-title">Web Developer</h5>
+            <a href=" https://jahidads.github.io/Web-Developer/" class="btn btn-primary" target="_blank">View Project</a>
           </div>
         </div>
       </div>
