--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <div class="row g-4">
     <div class="col-md-4" data-aos="fade-right">
       <div class="card shadow text-center p-3">
-        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/277574377_2780637402244787_8171004333417298666_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHoHPFITYCIR7vhUzEqmu21wBtuLFp0QY3AG24sWnRBjXxKNm8DtyjYlMv8TZvcpDHorRuOKhvUBF36EnHSBaAq&_nc_ohc=dHzeXQc_rdIQ7kNvwHPPTcx&_nc_oc=Adkyer0MkJvFGhFUfJ6F_boWzxNPdG2Vf2iZfpED9KWbakp08EzIXmaIKJFuhz1-zCo&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=_q7RM3Z2ozKtXcAPPT6_Vg&oh=00_AfI381bMpvni_VvSOI1alTH8WjXO6C4NEKHzsHtuFQEoqA&oe=6832244D" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/277574377_2780637402244787_8171004333417298666_n.jpg?stp=c10.0.940.943a_dst-jpg_s200x200_tt6&_nc_cat=110&ccb=1-7&_nc_sid=1d2534&_nc_ohc=nqS0scFRiWUQ7kNvwFAxveP&_nc_oc=AdnOt071LQILBVHnkaJy8A4rolJCI_FL7YNh_cJjSKa8msltlaivA0wWByDkPClAHdM&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=MpgJKykXsVDNHLSDQZygNg&oh=00_AfL4bPWRB270zviZenNhbp5qvs-yosoD7ydsM_m15z-_KQ&oe=6839068F" class="rounded-circle mx-auto" style="width: 100px;" alt="Akash Ahmed image">
         <p class="mt-3">"Amazing service! Jahid built my dream website perfectly."</p>
         <h5>Akash Ahmed </h5>
         <div class="star-rating mt-2">
@@ -260,7 +260,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
       <div class="card shadow text-center p-3">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Sarah Lee image">
         <p class="mt-3">"Very professional and friendly. Highly recommended."</p>
         <h5>Sarah Lee</h5>
         <div class="star-rating mt-2">
@@ -271,7 +271,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/494306113_2534612656885964_3171710037323253750_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGHYewrOXM_3bWOUSG11b8O2gScNEISjqbaBJw0QhKOphFmHyFvW7mHGY-6_wZe7rcbt5YyIcHYPtVx6dzPzbZD&_nc_ohc=JFMcSWhiCIgQ7kNvwHgVUoT&_nc_oc=Admy9FMT0ks4zK-CtC97kXcNeuLD4vyb9gHnHAqC6TpTAQFmzizOcYchY_6yLJ8vDQo&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=K0g8SQ_k3kpQHc2Fk5nh_A&oh=00_AfLDGADKf4PPGh8rKMWNZfL1n_OgS1aSLWk4wXz0wsxbQg&oe=683223B4" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/494306113_2534612656885964_3171710037323253750_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_ohc=G1vJJFL7sLIQ7kNvwGmzZke&_nc_oc=AdmQg9w-rBfLnwNH3yuyxkiOB3ojfmd7vMFre8daF6cdXUY_weBl_nLrMI2GNPQiLiI&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=5QGNrDL0rRn7MpLy7DVCwg&oh=00_AfKvm53ttYM6mAvB3zk2YtIXZGlm2u1YeGWBxD2s_in1gA&oe=6838FCF2" class="rounded-circle mx-auto" style="width: 100px;" alt="RasheL HosseN image">
         <p class="mt-3">"Top-notch design and development skills. Will hire again!"</p>
         <h5>RasheL HosseN</h5>
         <div class="star-rating mt-2">
@@ -282,7 +282,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/472265164_122216707160022439_1001905034899659524_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGRfDorJWkX7sSU3WdrbKzWg5XmHkxglvCDleYeTGCW8L7o1ADaKdk64a6uCXixcJwksmASqPoOXoabdkw1ZrPr&_nc_ohc=lI9GR3qym9sQ7kNvwHA6VPm&_nc_oc=Adkqw_31Qc1CVoccaSecR9n9dA0eDM8KC_0355TmXj0_h4f_1hU6K9RyupLpT7EY7H4&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=8rCSD2mo6Jv-1uwbhlFFjA&oh=00_AfLBd9u8QkCExiXG7dpydqzEMmLZ_ubD4mMne3-9MpaHOA&oe=6831F790" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/472265164_122216707160022439_1001905034899659524_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=pUqNkPT7ziEQ7kNvwEikhnl&_nc_oc=AdmfaECCCcoUF6fgkS9UsBSsA3oLE6J0XJIgrvh3aChFjCw6v_b8M5ve7zzyDfGDOyY&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=-bmh0KM8O2MNRelIQgeBPg&oh=00_AfI1dzFQjKAGZeKvP0Nie1jfF47rTcwzPA2IQ0hw0DZ_XQ&oe=6838FF90" class="rounded-circle mx-auto" style="width: 100px;" alt="Abdullah Al Kafi image">
         <p class="mt-3">"Top-notch The system demonstrates a strong commitment to safe, traditional development principles with modern protection."</p>
         <h5>Abdullah Al Kafi</h5>
         <div class="star-rating mt-2">
@@ -293,7 +293,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/491918938_122217474758168483_4678418564444703115_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeG4FvK7VwEJcudL-4stdny4X1c71U2MadFfVzvVTYxp0Rtffhe4ExBQPOhVwobQJU8VRcX10M5vL7rPxSo4id8U&_nc_ohc=DDIbtPwMdsUQ7kNvwGuMNSA&_nc_oc=Adm8HP7feEHCM_3zfBzJ0WNfXVhKvV1NcYD6PnHXZRIkVj4YqNstJPiiD_jGyfbIBvg&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=IqzQFVkvUcGteBb3fbC_fw&oh=00_AfK26E_WvQH7jcdO4zHIHN-QFhAyg5Z3xhO0KWRhoPZ7sw&oe=6831F7BF" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/499574416_122223342242168483_8459789123731702524_n.jpg?stp=dst-jpg_s100x100_tt6&_nc_cat=110&ccb=1-7&_nc_sid=e99d92&_nc_ohc=O--BzFDL9fAQ7kNvwGStiFi&_nc_oc=AdltvRqPLlWsnG2rXz2K6n2XohfEMm2cbuo04Np9NEiZAiCayraznWOtL8Pg0IE93BQ&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=SmZTlw6Rqf_Huy8Iz7DYIg&oh=00_AfLp_d6-qBfpBlYO955BgyxGUeR-TyghF_eSgWkRJtaW2A&oe=6838FB8A" class="rounded-circle mx-auto" style="width: 100px;" alt="Ishraq Ahmad image">
         <p class="mt-3">"The project reflects a high level of security hygiene and responsibility."</p>
         <h5>Ishraq Ahmad</h5>
         <div class="star-rating mt-2">
@@ -304,7 +304,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/486288441_619825231031202_472849673548077449_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeF5HDwxbpga3ZHgculj7G4hbD9HmOq768xsP0eY6rvrzHCw4hUlzO4iYYMcIyUlw1Kg-FN_4SbTHpdzdatbnDtX&_nc_ohc=g_xUbrVh7-0Q7kNvwG4tnLG&_nc_oc=AdmEbFiC5fXiN5vvYs-TAoGH3CdM-aIYKcXlaAMJQA_4HoD70jYh3Jvacbdh0ujSux0&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=vo8GR8arjT_XjvskOmOrSw&oh=00_AfKBNT61ahsy-XafIp8_HbbYlnoZrN-jwdm1XTsS5mR40Q&oe=68321D55" class="rounded-circle mx-auto" style="width: 100px;" alt="">
+        <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/496007504_660315050315553_4053619360431462561_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=111&ccb=1-7&_nc_sid=1d2534&_nc_ohc=6Zstusvi6RYQ7kNvwETSQ-P&_nc_oc=AdmLZUheMJ0crlOKVCXlpXNV75cfCOe5OIsxwKRYUbEN3aScG53b3rJa7T8AHIWxBVc&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=7fa90qjwXIPEl0TjWcqFpg&oh=00_AfKxirMDibaZvXqlhEe6kokMZFFt_UdwDHdZwn6sPUGOBA&oe=6839066F" class="rounded-circle mx-auto" style="width: 100px;" alt="Tanim Rahman image">
         <p class="mt-3">"All critical attack vectors — including SQL injection, XSS, CSRF, session hijacking, and insecure file handling — are effectively mitigated."</p>
         <h5>MD Tanim Rahman</h5>
         <div class="star-rating mt-2">
