--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jahid Hasan | Developer Portfolio</title>
-  <link rel="icon" href="image/495563656_122107947614855440_1152109947886773901_n.jpg" type="image/png">
+  <link rel="icon" href="https://jahidads.netlify.app/image/495563656_122107947614855440_1152109947886773901_n.jpg" type="image/png">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -165,7 +165,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-    <img src="image/495563656_122107947614855440_1152109947886773901_n.jpg" alt="Logo" style="height: 50px; margin-right: 10px; border-radius: 50%;">
+    <img src="https://jahidads.netlify.app/image/495563656_122107947614855440_1152109947886773901_n.jpg" alt="Logo" style="height: 50px; margin-right: 10px; border-radius: 50%;">
       Jahid Hasan
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
