--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <section id="home" class="hero">
   <video autoplay loop muted playsinline class="background-video">
-    <source src="video/banner.mp4" type="video/mp4">
+    <source src="banner.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <h1 data-aos="fade-up" style="animation: fadeIn 2s ease-in-out, colorChange 2s infinite, bounce 3s infinite, rotateText 6s infinite;">
@@ -376,7 +376,7 @@
   <div class="row g-4 justify-content-center">
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/vip-icon-for-graphic-design-logo-website-social-media-mobile-app-ui-png.webp" class="card-img-top portfolio-img" alt="Project 1">
+        <img src="vip-icon-for-graphic-design-logo-website-social-media-mobile-app-ui-png.webp" class="card-img-top portfolio-img" alt="Project 1">
         <div class="card-body text-center">
           <h5 class="card-title">Traditional-website</h5>
           <a href="https://jahidads.github.io/my-traditional-website/" class="btn btn-primary" target="_blank">View Project</a>
@@ -385,7 +385,7 @@
     </div>
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="150">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png (1).webp" class="card-img-top portfolio-img" alt="Project 2">
+        <img src="ai-generated-ninja-art-illustrations-for-stickers-logo-tshirt-design-poster-etc-png (1).webp" class="card-img-top portfolio-img" alt="Project 2">
         <div class="card-body text-center">
           <h5 class="card-title">Developer Portfolio</h5>
           <a href="#" class="btn btn-primary" target="_blank">View Project</a>
@@ -394,7 +394,7 @@
     </div>
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="200">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/hacker-logo-or-hacker-in-black-hoodie-cyber-crime-with-laptop-free-png.webp" class="card-img-top portfolio-img" alt="Project 3">
+        <img src="hacker-logo-or-hacker-in-black-hoodie-cyber-crime-with-laptop-free-png.webp" class="card-img-top portfolio-img" alt="Project 3">
         <div class="card-body text-center">
           <h5 class="card-title">CyberSecPro</h5>
           <a href="https://jahidads.github.io/Cyber-Security/#" class="btn btn-primary" target="_blank">View Project</a>
@@ -403,7 +403,7 @@
     </div>
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="250">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/project-task-management-and-effective-time-planning-tools-project-development-icon-3d-vector-illustration-png.webp" class="card-img-top portfolio-img" alt="Project 4">
+        <img src="project-task-management-and-effective-time-planning-tools-project-development-icon-3d-vector-illustration-png.webp" class="card-img-top portfolio-img" alt="Project 4">
         <div class="card-body text-center">
           <h5 class="card-title">Business-portfolio</h5>
           <a href="https://jahidads.github.io/business-portfolio/#" class="btn btn-primary" target="_blank">View Project</a>
@@ -412,7 +412,7 @@
     </div>
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="300">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/495563656_122107947614855440_1152109947886773901_n.jpg" class="card-img-top portfolio-img" alt="Project 5">
+        <img src="495563656_122107947614855440_1152109947886773901_n.jpg" class="card-img-top portfolio-img" alt="Project 5">
         <div class="card-body text-center">
           <h5 class="card-title">My Portfolio</h5>
           <a href="https://jahidads.github.io/my-portfolio/" class="btn btn-primary" target="_blank">View Project</a>
@@ -421,7 +421,7 @@
     </div>
     <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="350">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/vecteezy_icon-free-logo-javascript_53066817.png" class="card-img-top portfolio-img" alt="Project 6">
+        <img src="vecteezy_icon-free-logo-javascript_53066817.png" class="card-img-top portfolio-img" alt="Project 6">
         <div class="card-body text-center">
           <h5 class="card-title">Web Developer</h5>
           <a href=" https://jahidads.github.io/Web-Developer/" class="btn btn-primary" target="_blank">View Project</a>
@@ -430,7 +430,7 @@
     </div>
         <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="350">
       <div class="card shadow h-100 border-0 portfolio-card">
-        <img src="image/patient-profile-color-icon-design-style-vector.jpg" class="card-img-top portfolio-img" alt="Project 7">
+        <img src="patient-profile-color-icon-design-style-vector.jpg" class="card-img-top portfolio-img" alt="Project 7">
         <div class="card-body text-center">
           <h5 class="card-title">Resume Portfolio</h5>
           <a href="https://jahidads.github.io/Resume-Portfolio/" class="btn btn-primary" target="_blank">View Project</a>
@@ -512,7 +512,7 @@
   <div class="row g-4">
     <div class="col-md-4" data-aos="fade-right">
       <div class="card shadow text-center p-3">
-        <img src="image/277574377_2780637402244787_8171004333417298666_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Akash Ahmed image">
+        <img src="277574377_2780637402244787_8171004333417298666_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Akash Ahmed image">
         <p class="mt-3" style="font-style: italic; color: #555;">"Amazing service! Jahid built my dream website perfectly."</p>
         <h5 style="font-weight: bold; color: #3170af;">Akash Ahmed</h5>
         <div class="star-rating mt-2">
@@ -523,7 +523,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
       <div class="card shadow text-center p-3">
-        <img src="image/44.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Sarah Lee image">
+        <img src="44.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Sarah Lee image">
         <p class="mt-3" style="font-style: italic; color: #555;">"Very professional and friendly. Highly recommended."</p>
         <h5 style="font-weight: bold; color: #3170af;">Sarah Lee</h5>
         <div class="star-rating mt-2">
@@ -534,7 +534,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="image/494306113_2534612656885964_3171710037323253750_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="RasheL HosseN image">
+        <img src="494306113_2534612656885964_3171710037323253750_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="RasheL HosseN image">
         <p class="mt-3" style="font-style: italic; color: #555;">"Top-notch design and development skills. Will hire again!"</p>
         <h5 style="font-weight: bold; color: #3170af;">RasheL HosseN</h5>
         <div class="star-rating mt-2">
@@ -545,7 +545,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="image/472265164_122216707160022439_1001905034899659524_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Abdullah Al Kafi image">
+        <img src="472265164_122216707160022439_1001905034899659524_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Abdullah Al Kafi image">
         <p class="mt-3" style="font-style: italic; color: #555;">"Top-notch! The system demonstrates a strong commitment to safe, traditional development principles with modern protection."</p>
         <h5 style="font-weight: bold; color: #3170af;">Abdullah Al Kafi</h5>
         <div class="star-rating mt-2">
@@ -556,7 +556,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="image/481779225_122209294778168483_8677747919508154245_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Ishraq Ahmad image">
+        <img src="481779225_122209294778168483_8677747919508154245_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Ishraq Ahmad image">
         <p class="mt-3" style="font-style: italic; color: #555;">"The project reflects a high level of security hygiene and responsibility."</p>
         <h5 style="font-weight: bold; color: #3170af;">Ishraq Ahmad</h5>
         <div class="star-rating mt-2">
@@ -567,7 +567,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left" data-aos-delay="400">
       <div class="card shadow text-center p-3">
-        <img src="image/496007504_660315050315553_4053619360431462561_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Tanim Rahman image">
+        <img src="496007504_660315050315553_4053619360431462561_n.jpg" class="rounded-circle mx-auto" style="width: 100px;" alt="Tanim Rahman image">
         <p class="mt-3" style="font-style: italic; color: #555;">"All critical attack vectors — including SQL injection, XSS, CSRF, session hijacking, and insecure file handling — are effectively mitigated."</p>
         <h5 style="font-weight: bold; color: #3170af;">MD Tanim Rahman</h5>
         <div class="star-rating mt-2">
