--- a/index.html
+++ b/index.html
@@ -172,11 +172,43 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      <ul class="navbar-nav mx-auto text-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#home">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg">
+          <path d="M3 10L12 3L21 10" stroke="#ffd700" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <rect x="6" y="10" width="12" height="10" rx="2" stroke="#00d1ff" stroke-width="2"/>
+        </svg>
+        Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="7" width="18" height="13" rx="2" stroke="#3170af" stroke-width="2"/>
+          <path d="M16 3H8V7H16V3Z" stroke="#00d1ff" stroke-width="2"/>
+        </svg>
+        Portfolio
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#testimonials">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="12" cy="8" r="4" stroke="#ff5733" stroke-width="2"/>
+          <path d="M4 20c0-3.314 3.582-6 8-6s8 2.686 8 6" stroke="#ffd700" stroke-width="2"/>
+        </svg>
+        Testimonials
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="5" width="18" height="14" rx="2" stroke="#00d1ff" stroke-width="2"/>
+          <path d="M3 5l9 7 9-7" stroke="#3170af" stroke-width="2"/>
+        </svg>
+        Contact
+          </a>
+        </li>
       </ul>
       <button class="toggle-btn ms-3" onclick="toggleDarkMode()">🌙</button>
     </div>
