--- a/index.html
+++ b/index.html
@@ -492,6 +492,24 @@
         </div>
       </div>
     </div>
+        <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="350">
+      <div class="card shadow h-100 border-0 portfolio-card">
+        <img src="8597533.png" class="card-img-top portfolio-img" alt="Project 8">
+        <div class="card-body text-center">
+          <h5 class="card-title">Cybershield</h5>
+          <a href="https://jahidads.github.io/CyberShield/" class="btn btn-primary" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
+        <div class="col-md-4 col-sm-6 mb-4" data-aos="zoom-in" data-aos-delay="350">
+      <div class="card shadow h-100 border-0 portfolio-card">
+        <img src="OSAAS.png" class="card-img-top portfolio-img" alt="Project 9">
+        <div class="card-body text-center">
+          <h5 class="card-title">Teampro</h5>
+          <a href="https://jahidads.github.io/TeamPro/" class="btn btn-primary" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
   </div>
   <style>
     /* Portfolio Section Styles */
