--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - increased .navbar-toggler z-index so the mobile menu button stays visible above hero overlays
   -->
   <title>Jahid Hasan | Developer Portfolio</title>
-  <link rel="icon" href="https://jahidads.netlify.app/image/495563656_122107947614855440_1152109947886773901_n.jpg" type="image/png">
+  <link rel="icon" href="profile.jpg" type="image/png">
     <meta name="description" content="Jahid Hasan - Web Developer Portfolio. Showcasing projects, skills, and testimonials. Contact for web development services.">
 
   <!-- Bootstrap CSS -->
@@ -865,3 +865,4 @@
 
 </body>
 </html>
+
